fix du petit décalage des paires trouvées dans la barre du haut, en jouant sur le column-gap et en retirant la width 25% de MiniCard

--- a/src/components/FoundPairs/FoundPairs.scss
+++ b/src/components/FoundPairs/FoundPairs.scss
@@ -20,7 +20,6 @@
   &-won {
     display: flex;
     flex-direction: row;
-    align-items: baseline;
-    justify-content: flex-start;
+    column-gap: 50px;
   }
 }
