--- a/src/components/MiniCard/MiniCard.scss
+++ b/src/components/MiniCard/MiniCard.scss
@@ -1,9 +1,6 @@
 @use '../../styles/vars';
 
 .MiniCard {
-  display: inline-block;
-  width: 25%;
-  margin-right: 1rem;
 
   &-itself {
     border-radius: 10px;
